<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="#A0f0F0">

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/create_text1"
            android:textSize="10pt"/>
        <EditText
            android:id="@+id/create_name"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/create_text2"
            android:textSize="10pt"/>
        <EditText
            android:id="@+id/create_author"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/c_price"
            android:text="@string/create_text3"
            android:textSize="10pt"
            android:layout_centerInParent="true"/>
        <EditText
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/create_date"
            android:ems="10"/>
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create"
        android:text="@string/create_button"
        android:textSize="10pt"
        android:background="@drawable/shape"/>
</TableLayout>
