<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:stretchColumns="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/account" />
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/account_button1"
            android:textColor="@color/main_button"
            android:id="@+id/a_personal"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:hint="请输入0-9位数字或字母"
            android:gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/account_button2"
            android:textColor="@color/main_button"
            android:id="@+id/a_manager"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:hint="请输入0-9位数字或字母"
            android:gravity="center"/>
    </TableRow>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:paddingTop="5dp">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_button3"
            android:textColor="@color/main_button"
            android:id="@+id/sign_in"
            android:textSize="20sp"
            android:background="@drawable/shape"
            android:layout_marginLeft="75dp"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_button4"
            android:textColor="@color/main_button"
            android:id="@+id/sign_up"
            android:textSize="20sp"
            android:background="@drawable/shape"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</TableLayout>
